# youtubemusic-in-terminal

./: README.md  pyproject.toml  requirements.txt
ytmusic_terminal/: __main__.py  api.py  player.py  ui.py
