[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtubemusic-in-terminal"
version = "0.1.0"
description = "A terminal-based YouTube Music client"
requires-python = ">=3.9"
dependencies = [
    "ytmusicapi>=1.3.0",
    "yt-dlp>=2024.1.0",
]

[project.scripts]
ytmusic = "ytmusic_terminal.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ytmusic_terminal*"]
